# arpg-dev

./: .gitignore  .godot-version  .tool-versions  AGENTS.md  CLAUDE.md  Makefile  PROGRESS.md  README.md  docker-compose.yml  manifest  pyproject.toml
.claude/skills/: refactor
.cursor/rules/: ci-pack-maintenance.mdc  (+1 more)
.maintainability/: extraction-coupling-baseline.tsv  file-size-baseline.tsv
assets/: README.md
client/: project.godot
docs/: CODEMAP.md  PROGRESS.md
make/: agents.mk  ci.mk  client.mk  db.mk  server.mk  shared.mk  subfiles.mk  test.mk  tools.mk
scripts/: benchmark.sh  bot_client.sh  bot_client_local.sh  bot_local.sh  bot_visual.sh  check-extraction-coupling-ratchet.py  check-file-size-ratchet.sh  check-progress-dashboard.sh  ci.sh  client_smoke.sh  godot_ci_flags.sh  link-agent-skills.sh  play.sh  play_remote.sh  quiet_helpers.sh  run_quiet.sh  test_all.sh
server/: go.mod  go.sum
skills/: README.md
tools/: __init__.py  content_manifest.py  dungeon_density.py  test_build_codex.py  test_ci_pack.py  test_extraction_coupling_ratchet.py  test_file_size_ratchet.py  test_scenario_movement_audit.py  test_validate_codemap.py  test_validate_dungeon_goldens.py  test_validate_fog_presentation.py  test_validate_main_config.py  test_validate_shared.py  test_validate_unique_items.py  validate_boss_patterns.py  validate_codemap.py  validate_dungeon_goldens.py  validate_fog_presentation.py  validate_i18n.py  validate_item_naming.py  validate_item_presentations.py  validate_main_config.py  validate_shared.py  validate_skills.py  validate_unique_items.py
(+2883 files in other folders)
