# Python tooling pins for the agent protocol bot, replay wrapper, and shared
# schema validator. ADR-0001 baseline is Python 3.12.x; lower bounds are pinned
# and upper bounds left open so the tooling also runs on the newer interpreter
# present locally at scaffold time (see docs as-built notes).
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arpg-tools"
version = "0.0.0"
description = "Agent protocol bot, replay wrapper, and shared schema validation for arpg-dev."
requires-python = ">=3.12"
dependencies = [
    "websockets>=13.0",
    "httpx>=0.27.0",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
include = ["tools*"]

[tool.pytest.ini_options]
testpaths = ["tools"]
